@@ -1,6 +1,8 @@
 New entries should be added at the top
 
-2005-09-30 setupext.py: added numarray_inc_dirs for building against
+2005-07-04 backend_gtk.py: require PyGTK version 2.0.0 or higher - SC
+
+2005-06-30 setupext.py: added numarray_inc_dirs for building against
            numarray when not installed in standard location - ADS
 
 2005-06-27 backend_svg.py: write figure width, height as int, not float.
